style.css
/* ... */
.about{
    position: absolute;
    left: 50%;
    top: 0%;
    width: 50%;
    height: 80%;
    overflow:hidden;
}

.title{
    text-align: center;
    font-size: 50px;
    width: 100%;
    margin-bottom: 2%;
}

.fa-github{
    color: rgb(92, 92, 92);
    padding-right: 1%;
}

.fa-youtube{
    color: rgb(92, 92, 92);
    padding-right: 1%;
}

.fa-twitch{
    color: rgb(92, 92, 92);
    padding-right: 1%;
}

.fa-github:hover{
    color: rgb(255, 255, 255);
}

.fa-youtube:hover{
    color: rgb(255, 255, 255);
}

.fa-twitch:hover{
    color: rgb(255, 255, 255);
}

.icons{
    position: absolute;
    left: 50%;
    top: 90%;
    width: 50%;
    height: 10%;
    font-size: 0.8vw;
}

.sociallink{
    text-decoration: none;
}

.arrow{
    position: absolute;
    color: rgb(255, 255, 255);
    top: 90%;
    width: 100%;
    font-size: 0.8vw;
    text-align: center;
}

#name{
    font-family: Impacto, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
    font-size: 12.5vw;
}

#nameprecursor{
    font-family: Arial, Helvetica, sans-serif;
    font-size: 5vw;
}

#aboutme{
    font-family: Arial, Helvetica, sans-serif;
    font-size: 1.8vw;
}

#logo{
    font-size: 200%;
    font-family: monospace;
    position: static;
    margin:1%;
    max-width: max-content;
}

@media screen and (max-width: 800px) {
    .greeting{
        top: 300px
    }

    .bigword{
        text-align: center;
        width: 100%;
        max-width: none;
    }
    .about{
       left: 0%;
       top: 115%;
       text-align: center;
       width: 100%;
       overflow:visible;
    }
    .bigword::after{
        left: 0%
    }

    .icons{
        position: absolute;
        left: 0%;
        top: 202%;
        text-align: center;
        width: 100%;
        font-size: 1.6vw;
        
    }

    .arrow{
        position:absolute;
        font-size: 1.6vw;
    }

    #aboutme{
        font-size: 3.6vw;
    }

    #name{
        font-size: 25vw;
    }

    #nameprecursor{
        font-size: 10vw;
    }
   
  }
/* ... */

